--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,48 +1,51 @@
-.card {
-    width: 300px;
-    margin: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-  }
-  
-  .card-body {
-    padding: 20px;
-  }
-  
-  .card-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .card-text {
-    margin-top: 10px;
-  }
-  
-  .list-group-item {
-    background-color: #f8f9fa;
-    border: none;
-  }
-  
-  .btn {
-    margin-top: 10px;
-    margin-right: 10px;
-  }
-  
-  .btn-danger {
-    background-color: #dc3545;
-    color: #fff;
-  }
-  
-  .btn-secondary {
-    background-color: #6c757d;
-    color: #fff;
-  }
+/* .card {
+  width: 300px;
+  margin: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: transparent;
+}
 
-  .img-body {
-    width: 200px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.card-body {
+  padding: 20px;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.card-text {
+  margin-top: 10px;
+}
+
+.list-group-item {
+  background-color: #f8f9fa;
+  border: none;
+}
+
+.btn {
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.btn-danger {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  color: #fff;
+}
+
+.img-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: block;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+} */
