--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,5 @@
-/* html {
+html {
   height: 100%;
-  /* max-height: 600px; */
-  width: 1000px;
   background-color: hsla(200,40%,30%,.4);
   background-image:   
     url('https://78.media.tumblr.com/cae86e76225a25b17332dfc9cf8b1121/tumblr_p7n8kqHMuD1uy4lhuo1_540.png'), 
@@ -34,11 +32,15 @@
       1000px 100%,
       400px 0;
     }
-  } */
+  }
+
+  #navbar {
+    background-color: transparent !important;
+  }
 
   body {
     font-family: 'Georgia', 'Times New Roman', serif;
-    background-color: #d2b48c; /* Tan */
+    background-color: transparent !important;
     margin: 0;
     padding: 0;
   }
@@ -148,4 +150,19 @@
     color: #8b4513; /* SaddleBrown */
     font-weight: bold;
     margin-top: 30px;
+  }
+
+  #logContainer {
+    background-color: transparent !important;
+  }
+
+  #log1Container {
+    background-color: transparent !important;
+  }
+
+  #regContainer {
+    background-color: transparent !important;
+  }
+  #reg1Container {
+    background-color: transparent !important;
   }
